--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/DayStyle"
+    style="@style/NightStyle"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="181dp"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginStart="@dimen/margin"
+            android:backgroundTint="@color/ButtonColor"
+            android:id="@+id/settings"
+            android:text="@string/settings" />
 
         <EditText
             android:id="@+id/text"
+            style="@style/NightStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/DayStyle"
+            android:layout_height="128dp"
             android:hint="txt" />
     </LinearLayout>
 
@@ -25,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="101dp"
         android:layout_marginTop="72dp"
-        style="@style/DayStyle"
+        style="@style/NightStyle"
         android:orientation="horizontal">
 
         <Button
@@ -56,7 +66,7 @@
 
         <Button
             android:id="@+id/minus"
-            android:layout_width="57dp"
+            android:layout_width="48dp"
             android:layout_height="100dp"
             android:layout_marginStart="@dimen/margin"
             android:backgroundTint="@color/ButtonSL"
@@ -69,7 +79,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="106dp"
-        style="@style/DayStyle"
+        style="@style/NightStyle"
         android:orientation="horizontal">
 
         <Button
@@ -100,7 +110,7 @@
 
         <Button
             android:id="@+id/multiply"
-            android:layout_width="57dp"
+            android:layout_width="49dp"
             android:layout_height="100dp"
             android:layout_marginStart="@dimen/margin"
             android:backgroundTint="@color/ButtonSL"
@@ -113,7 +123,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="104dp"
-        style="@style/DayStyle"
+        style="@style/NightStyle"
         android:orientation="horizontal">
 
         <Button
@@ -146,7 +156,7 @@
 
         <Button
             android:id="@+id/share"
-            android:layout_width="60dp"
+            android:layout_width="49dp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:backgroundTint="@color/ButtonSL"
@@ -159,7 +169,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="164dp"
-        style="@style/DayStyle"
+        style="@style/NightStyle"
         android:orientation="horizontal">
 
         <Button
@@ -182,7 +192,7 @@
 
         <Button
             android:id="@+id/plus"
-            android:layout_width="73dp"
+            android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_marginStart="@dimen/margin"
             android:backgroundTint="@color/ButtonSL"
