--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,206 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/NightStyle"
     android:orientation="vertical"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_home"
         android:layout_width="match_parent"
-        android:layout_height="181dp"
-        android:orientation="vertical">
 
-        <Button
-            android:layout_width="55dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:id="@+id/settings"
-            android:text="@string/settings" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp" />
 
-        <EditText
-            android:id="@+id/text"
-            style="@style/NightStyle"
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:hint="txt" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="101dp"
-        android:layout_marginTop="72dp"
-        style="@style/NightStyle"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/nine"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_9"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/eight"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_8"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/seven"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_7"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/minus"
-            android:layout_width="48dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonSL"
-            android:text="@string/_minus"
-            android:textSize="@dimen/TextSize" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="24dp"
+        android:src="@drawable/ic_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="106dp"
-        style="@style/NightStyle"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/six"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_6"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/five"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_5"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/four"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_4"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/multiply"
-            android:layout_width="49dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonSL"
-            android:text="@string/_multiply"
-            android:textSize="@dimen/TextSize" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="104dp"
-        style="@style/NightStyle"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/three"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_3"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/two"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_2"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/one"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_1"
-
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/share"
-            android:layout_width="49dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="@color/ButtonSL"
-            android:text="@string/_share"
-            android:textSize="@dimen/TextSize" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="164dp"
-        style="@style/NightStyle"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/zero"
-            android:layout_width="210dp"
-            android:layout_height="100dp"
-
-            android:backgroundTint="@color/ButtonColor"
-            android:text="@string/_0"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/equals"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonSL"
-            android:text="@string/_equals"
-            android:textSize="@dimen/TextSize" />
-
-        <Button
-            android:id="@+id/plus"
-            android:layout_width="61dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="@dimen/margin"
-            android:backgroundTint="@color/ButtonSL"
-            android:text="@string/_plus"
-            android:textSize="@dimen/TextSize" />
-
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
