--- a/app/src/main/res/layout/activity_note_taker.xml
+++ b/app/src/main/res/layout/activity_note_taker.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black"
+    android:background="@color/Bck"
     tools:context=".NoteTakerActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_note"
@@ -24,28 +24,33 @@
                 android:layout_height="?attr/actionBarSize"/>
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
-    <EditText
-        android:id="@+id/editText_title"
-        android:hint="Title:"
-        android:textColorHint="@color/white"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:singleLine="true"
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
-    <EditText
-        android:id="@+id/editText_note"
-        android:hint="Add Notes: "
-        android:textColorHint="@color/white"
-        android:padding="8dp"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/editText_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Title:"
+            android:padding="8dp"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Add Notes: "
+            android:padding="8dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
+
 
 </LinearLayout>
