--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#B3B5D5</color>
     <color name="black_grey">#6F7373</color>
+    <color name="grin">#d9ed74</color>
+    <color name="Bck">#242626</color>
+    <color name="nc">#3a4241</color>
 </resources>
